--- a/public/ru/404.html
+++ b/public/ru/404.html
@@ -4,7 +4,7 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <title>404 Page not found | My New Hugo Blog</title>
+    <title>404 Page not found | Jule&#39;s Notes</title>
     <meta name="description"
         content="Blog">
     <link rel="canonical" href="http://localhost:1313/ru/404.html" />
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="http://localhost:1313/scss/style.min.aa7209164f013c6883aa54384ea45a46e582eacf9a17e9565badebd557dd1059.css">
 
     <meta property="og:url" content="http://localhost:1313/ru/404.html">
-  <meta property="og:site_name" content="My New Hugo Blog">
+  <meta property="og:site_name" content="Jule&#39;s Notes">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Blog">
   <meta property="og:locale" content="ru">
@@ -31,7 +31,7 @@
         <div class="navbar-brand">
             <a href="/" title="home" class="navbar-item">
                 <span class="logo">
-                    <h1>My New Hugo Blog</h1>
+                    <h1>Jule&#39;s Notes</h1>
                 </span>
             </a>
 
@@ -139,7 +139,7 @@
 
         </main><footer class="footer">
     <div class="content has-text-centered">
-    <span>&copy; 2025 <a href="http://localhost:1313/ru/">My New Hugo Blog</a></span>
+    <span>&copy; 2025 <a href="http://localhost:1313/ru/">Jule&#39;s Notes</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" target="_blank">Hugo</a> &
